Closed Bug 1211443 Opened 9 years ago Closed 9 years ago

webm/h.264/mp4 videos are not working

Categories

(Firefox for Android Graveyard :: General, defect)

44 Branch
ARM
Android
defect
Not set
normal

Tracking

(firefox44 verified, fennec44+)

RESOLVED FIXED
Firefox 44
Tracking Status
firefox44 --- verified
fennec 44+ ---

People

(Reporter: TeoVermesan, Assigned: esawin)

References

Details

Attachments

(1 file)

Tested with:
Device: Samsung Galaxy Note 5 (Android 5.1.1)
Build: Firefox for Android 44.0a1 (2015-10-05)

Steps to reproduce:
1. Go to people.mozilla.org/~nhirata/html_tp/elephants-dream.webm

Expected results:
- Video automatically starts to play

Actual results:
- Video doesn't start to play automatically (even if 'Allow autoplay' pref is enabled)
- A black screen is displayed. After tapping the screen, video controls are displayed
- After the 'Play' button is tapped, nothing happens.

Note:
- also h.264/mp4 videos are not working either on http://people.mozilla.org/~atrain/mobile/tests/media.html
- regression:
good build: 03-10
bad build: 04-10

pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=0010c0cb259e28faf764949df54687e3a21a2d0a&tochange=8464f02a2798cf9ff8759df712f2c77ec0b15d23
Can we get a regression range on inbound or fx-team ?
Teodora - Your changeset is a backout of bug 1186745. Bug 1186745 has landed again. Can you retest?
Flags: needinfo?(teodora.vermesan)
Tested using:
Devices: Nexus 6 (Android 5.1.1) and Moto X (Android 4.4.4)
Build: Firefox for Android 44.0a1 (2015-10-07)

1. Go to people.mozilla.org/~nhirata/html_tp/elephants-dream.webm 
=> video starts to play
2. Go to http://people.mozilla.org/~atrain/mobile/tests/media.html
=> h.264 videos are still displayed blank
Flags: needinfo?(teodora.vermesan)
tracking-fennec: --- → ?
Assignee: nobody → snorp
tracking-fennec: ? → 44+
Assignee: snorp → esawin
This is irritating. We need to get it fixed. Why didn't tests catch this?
This looks like a regression from bug 1209850.

We never reschedule an update once an update was scheduled before the decoder's initialization was done.
Attachment #8675185 - Flags: review?(jyavenard)
Comment on attachment 8675185 [details] [diff] [review]
0001-Bug-1211443-Drop-scheduled-update-if-decoder-initial.patch

Review of attachment 8675185 [details] [diff] [review]:
-----------------------------------------------------------------

Good catch. Sorry for that.
Attachment #8675185 - Flags: review?(jyavenard) → review+
See Also: → 1211959
Blocks: 1133677
Blocks: 1174784
No longer blocks: 1133677
I don't see how that could have prevented YouTube to work however. Isn't MSE enabled on android?
https://hg.mozilla.org/mozilla-central/rev/c70e4ab05343
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 44
Verified as fixed on latest Nightly build (10-20-2015), on Samsung Galaxy Note 5 (Android 5.1.1)
Does the fix apply to Firefox 45 on Android 4.4.4?
If it should I suggest checking the video on page
https://cdi2tp.math.tecnico.ulisboa.pt/texto/4
This video works on any current desktop browser or other mobile browsers for Android 4.4.4.
That particular video WFM, but I would recommend filing a new issue if you're still having video problems on that site Joao.
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: