Bug 1211443 - Drop scheduled update if decoder initialization isn't done yet. r=jya